Fix for hero sign up consent label to not be wrapped due to label size

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -112,6 +112,10 @@ h2 {
   vertical-align: middle;
 }
 
+#hero-sign-up label:last-child {
+  width: 95%;
+}
+
 #hero-sign-up button {
   border-radius: 12px;
   width: 45%;
